install-kkfileview/kkfile-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kkfile-svc
  namespace: kkfile
  labels:
    app: kkfile-svc
spec:
  type: NodePort
  ports:
  - port: 8012
    targetPort: 8012
    nodePort: 30012
  selector:
    app: kkfile
